--- a/public/css/hamburger.css
+++ b/public/css/hamburger.css
@@ -36,7 +36,7 @@
 }
 
 .hamburger-box {
-    width: 25px;
+    width: 20px;
     height: 20px;
     display: inline-block;
     position: relative;
@@ -51,9 +51,9 @@
 .hamburger-inner,
 .hamburger-inner::before,
 .hamburger-inner::after {
-    width: 25px;
-    height: 2px;
-    background-color: hsl(120, 100%, 95%);
+    width: 20px;
+    height: 3px;
+    background-color: #333;
     border-radius: 4px;
     position: absolute;
     transition-property: transform;
