--- a/public/css/style.css
+++ b/public/css/style.css
@@ -41,7 +41,11 @@ version history: [location of file]
 body {
     overflow-x: hidden;
 }
-
+.body {
+    padding: 40px 20px 60px;
+    min-height:100%;
+  }
+  
 .nav-link {
     font-weight: 500;
     font-family: var(--main-font);
