--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,6 +38,7 @@ version history: [location of file]
 }
 
 
+
 body{
     overflow-x: hidden;
 }
@@ -239,6 +240,7 @@ body{
   display: flex;
   width: 100%;
   max-width: 100%;
+  overflow: hidden;
 
 }
 
@@ -285,7 +287,7 @@ label{
 }
 
 .form-control{
-    padding: 20px 15px !important;
+    padding: 20px 15px ;
     border: 1px solid #c4c4c4 !important;
 }
 
@@ -302,6 +304,47 @@ form .reg-btn{
     margin-left: 1.2rem;
 }
 
+/* Dont touch */
+
+.back{
+    position: absolute;
+    top:20px;
+    left: 15px;
+}
+.slide-fade-enter-active {
+    transition: all .3s ease;
+  }
+  .slide-fade-leave-active {
+    transition: all .8s cubic-bezier(1.0, 0.5, 0.8, 1.0);
+  }
+  .slide-fade-enter, .slide-fade-leave-to
+   {
+    transform: translateX(10px);
+    opacity: 0;
+  }
+  .fade-enter-active, .fade-leave-active {
+    transition: opacity .5s;
+  }
+  .fade-enter, .fade-leave-to  {
+    opacity: 0;
+  }
+
+  .toCaps{
+      text-transform: capitalize;
+  }
+  
+  .w-70{
+    width: 70% !important;
+    }
+    .w-30{
+    width: 30% !important;
+    }
+
+    .body{
+        padding:50px 20px 70px;
+        position: relative;
+        min-height: 100%;
+    }
 /* * {
     margin: 0;
     padding: 0;
@@ -468,25 +511,12 @@ a {
     width: 0;
 }
 
-.wave-btn{
-
-}
-
-
-
-
-
-
 
 
 input.text {
     padding: 3px;
     border: 1px solid #999999;
 }
-
-
-
-
 
 
 table {
@@ -568,39 +598,6 @@ td {
       margin-left: -25px;
     }
   
-.slide-fade-enter-active {
-    transition: all .3s ease;
-  }
-  .slide-fade-leave-active {
-    transition: all .8s cubic-bezier(1.0, 0.5, 0.8, 1.0);
-  }
-  .slide-fade-enter, .slide-fade-leave-to
-   {
-    transform: translateX(10px);
-    opacity: 0;
-  }
-  .fade-enter-active, .fade-leave-active {
-    transition: opacity .5s;
-  }
-  .fade-enter, .fade-leave-to  {
-    opacity: 0;
-  }
-
-  .back{
-      position: absolute;
-      top:20px;
-      left: 15px;
-  }
-  .toCaps{
-      text-transform: capitalize;
-  }
-  
-  .w-70{
-    width: 70% !important;
-    }
-    .w-30{
-    width: 30% !important;
-    }
 
     
 @media(max-width:425px) {
