--- a/public/css/style.css
+++ b/public/css/style.css
@@ -449,6 +449,9 @@ padding: 15px;
     color: #fff;
     border-color: var(--primary-btn);
 }
+.side-bar{
+   
+}
 /* * {
     margin: 0;
     padding: 0;
