--- a/public/css/app.css
+++ b/public/css/app.css
@@ -449,9 +449,11 @@ padding: 15px;
     color: #fff;
     border-color: var(--primary-btn);
 }
-.side-bar{
-   
-}
+
+
+/* teacher dashboard  */
+
+
 /* * {
     margin: 0;
     padding: 0;
