--- a/public/css/style.css
+++ b/public/css/style.css
@@ -794,3 +794,72 @@ td {
         left: 35%;
     }
 } */
+
+
+@font-face {
+    font-family: 'icomoon';
+    src:  url('../fonts/icomoon.eot');
+    src:  url('../fonts/icomoon.eot') format('embedded-opentype'),
+      url('../fonts/icomoon.ttf') format('truetype'),
+      url('../fonts/icomoon.woff') format('woff'),
+      url('../fonts/icomoon.svg') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: block;
+  }
+  
+  [class^="icon-"], [class*=" icon-"] {
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'icomoon' !important;
+    speak: never;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+  
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  
+  .icon-admin:before {
+    content: "\e900";
+  }
+  .icon-calendar:before {
+    content: "\e901";
+  }
+  .icon-cancel:before {
+    content: "\e902";
+  }
+  .icon-dashboard:before {
+    content: "\e903";
+  }
+  .icon-down-chevron:before {
+    content: "\e904";
+  }
+  .icon-edit:before {
+    content: "\e905";
+  }
+  .icon-education:before {
+    content: "\e906";
+  }
+  .icon-logout:before {
+    content: "\e907";
+  }
+  .icon-sort:before {
+    content: "\e908";
+  }
+  .icon-students:before {
+    content: "\e909";
+  }
+  .icon-teacher:before {
+    content: "\e90a";
+  }
+  .icon-visibility:before {
+    content: "\e90b";
+  }
+  .icon-visibility-open:before {
+    content: "\e90c";
+  }
+  
