new update on assessment page

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -354,6 +354,7 @@ form .reg-btn{
         padding:50px 20px 70px;
         position: relative;
         min-height: 100%;
+        background:#f7f8fa;
     }
 
 
