--- a/public/css/style.css
+++ b/public/css/style.css
@@ -605,6 +605,7 @@ padding: 15px;
 }
 .table-side{
     padding-top: 50px;
+    padding-right: 1rem;
 }
 
 .notify-side{
@@ -628,7 +629,17 @@ padding: 15px;
     border: none;
     
 }
-
+.modal-body .form-group{
+    margin: 0;
+}
+.sort-section{
+    width: 100%;
+    background-color: #fff;
+    display: flex;
+    box-shadow: 0px 4px 4px rgba(240, 241, 241, 0.25);
+    padding: 1rem;
+    margin-right: 10px;
+}
 /* teacher dashboard  */
 
 
