--- a/public/css/style.css
+++ b/public/css/style.css
@@ -462,19 +462,18 @@ form .reg-btn{
 }
 .admin-dashboard-nav a{
     display: flex;
-    color: #808080 !important;
+    color: #f7f8fa ;
     font-family: "Montserrat";
     padding: .2rem;
-    padding-left: 1rem;
-   
+    padding-left: 1rem;  
     
 }
-.admin-dashboard-nav .router-link-active{
+/* .admin-dashboard-nav .router-link-active{
   color: var(--primary-btn) !important;
   border-right: 1px solid var(--primary-btn);
    
     
-}
+} */
 .admin-dashboard-nav span{
     font-size: 22px;
 }
@@ -521,7 +520,7 @@ form .reg-btn{
     border-radius: 15px;
     border: none;
     padding: 10px;
-    margin: 10px;
+    margin: 10px 0;
 }
 .inner-top-cards{
     display: flex;
@@ -537,7 +536,7 @@ form .reg-btn{
     margin-bottom: 0;
 }
 .chart{
-margin: 1rem;
+margin: 1rem 0;
 background: #FFFFFF;
 box-shadow: 0px 4px 4px rgba(240, 241, 241, 0.25);
 border-radius: 15px;
