--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -46,6 +46,7 @@ $danger: $red !default;
 $light: $gray-100 !default;
 $dark: $gray-800 !default;
 
+
 // This table defines the theme colors (variant names)
 $theme-colors: () !default;
 $theme-colors: map-merge(
@@ -57,7 +58,8 @@ $theme-colors: map-merge(
     'warning': $warning,
     'danger': $danger,
     'light': $light,
-    'dark': $dark
+    'dark': $dark,
+
   ),
   $theme-colors
 );
