--- a/public/css/app.css
+++ b/public/css/app.css
@@ -727,6 +727,15 @@ legend{
   /* .nav-link {
     color: #000 !important;
   } */
+
+  .bd-table {
+    position: relative;
+    padding: 1rem;
+    margin: 1rem -15px 0;
+    border: solid #f8f9fa;
+    border-width: .2rem 0 0;
+    background-color: #fff;
+}
    .dropdown a{
     color: black !important;
   }
