--- a/public/css/app.css
+++ b/public/css/app.css
@@ -736,6 +736,17 @@ legend{
     border-width: .2rem 0 0;
     background-color: #fff;
 }
+.thead-darkgreen{
+    color: white;
+    background-color: rgba(19, 166, 153, 0.9);
+    border-color: rgba(19, 166, 153, 0.9);
+}
+
+.thead-darkblue{
+    color: white;
+    background-color:#0a4065;
+    border-color: #0a4065;
+}
    .dropdown a{
     color: black !important;
   }
