--- a/public/css/app.css
+++ b/public/css/app.css
@@ -452,6 +452,19 @@ form .reg-btn{
         min-height: 100%;
       
     }
+/* student-dashboard */
+.student-assessment .nav-tabs {
+    border-bottom: none;
+    justify-content: space-around !important;
+    padding-top: 15px !important;
+}
+.student-assessment .nav-tabs .nav-link.active {
+    color: #ffd708 !important;
+    background-color: rgba(255, 215, 8, 0.18) !important;
+    border-radius: 20px !important;
+    /* padding: 10px 20px !important; */
+    
+}
 
 
 /* admin dashboard  */
