--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');
+@import '~vue-single-date-picker/dist/vue-single-date-picker.css';
 
 
 /*-----------------------------------------------------------------------------
