--- a/public/css/style.css
+++ b/public/css/style.css
@@ -463,15 +463,17 @@ form .reg-btn{
     justify-content: space-around !important;
    
 }
-.student-assessment .nav-tabs .nav-link.active {
+/* .student-assessment .nav-tabs .nav-link.active {
     color: #ffd708 !important;
     background-color: rgba(255, 215, 8, 0.18) !important;
     border-radius: 20px !important;
     padding: 10px 20px !important;
     
-}
+} */
 
-
+.student-assessment > .card > .tabs > .card-header{
+    background-color:rgba(19, 166, 153, 0.9) !important;
+  }
 /* admin dashboard  */
 
 
