--- a/public/css/style.css
+++ b/public/css/style.css
@@ -777,6 +777,10 @@ legend{
     background-color: rgba(19, 166, 153, 0.9);
     border-color: rgba(19, 166, 153, 0.9);
 }
+.badge-darkgreen{
+    color: white;
+background-color: rgba(19, 166, 153, 0.9);
+}
 
 .thead-darkblue{
     color: white;
